[package]
name = "rust_rcon_mine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.12.0", features = ["attributes", "tokio1"]}
dotenv = "0.15.0"
mcping = "0"
webhook = "2.1.2"
